force-app/main/default/objects/OCE__AccountTactic__c/OCE__AccountTactic__c.object-meta.xml
<CustomObject>
    <description>Tactics for Account Plan.</description>
    <label>Account Tactic</label>
    <nameField>
        <label>Account Tactic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Tactics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>