force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Activity_City__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Activity_City__c</fullName>
    <label>Activity City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>