force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Activity_Country__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Activity_Country__c</fullName>
    <label>Activity Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__Countries</valueSetName>
    </valueSet>
</CustomField>