force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Activity_Name__c</fullName>
    <label>Activity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>