force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Activity_Name_Local_Language__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Activity_Name_Local_Language__c</fullName>
    <label>Activity Name (Local Language)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>