force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Activity_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Activity_State_Province__c</fullName>
    <label>Activity State / Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>