force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Activity_Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Activity_Therapeutic_Area__c</fullName>
    <label>Activity Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan Therapeutic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>