force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consultation/Advising (Advisory Board)</fullName>
            </value>
            <value>
                <fullName>Consultation/Advising (Single Advisor)</fullName>
            </value>
            <value>
                <fullName>Speaker Training</fullName>
            </value>
            <value>
                <fullName>Speaking Service (Presenter, Speaker)</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>