force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_ActivityOwner__c.field-meta.xml
<CustomField>
    <fullName>Lilly_ActivityOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Tactics</relationshipName>
    <type>Lookup</type>
</CustomField>