force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Associated_Congress__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Associated_Congress__c</fullName>
    <label>Associated Congress</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(AAAAI) Americal Academy of Allergy, Asthma and Immunology</fullName>
            </value>
            <value>
                <fullName>(AACE) American Association of Clinical Endocrinologists</fullName>
            </value>
            <value>
                <fullName>(AACR) American Association for Cancer Research</fullName>
            </value>
            <value>
                <fullName>(AAD) American Academy of Dermatology</fullName>
            </value>
            <value>
                <fullName>(AADE) American Association of Diabetes Educators</fullName>
            </value>
            <value>
                <fullName>(AAN) Americal Academy of Neurology</fullName>
            </value>
            <value>
                <fullName>(AANP) American Association of Nurse Practitioners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>