force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Medical Research</fullName>
            </value>
            <value>
                <fullName>Medical Research</fullName>
            </value>
            <value>
                <fullName>Other Contract Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>