force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Forecasted_US_Contracted_HCPs__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Forecasted_US_Contracted_HCPs__c</fullName>
    <label>Forecasted # US Contracted HCPs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>