force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Functional_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Functional_Owner__c</fullName>
    <label>Functional Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Development</fullName>
            </value>
            <value>
                <fullName>Corporate Affairs</fullName>
            </value>
            <value>
                <fullName>Early Phase</fullName>
            </value>
            <value>
                <fullName>GPORWE</fullName>
            </value>
            <value>
                <fullName>LRL</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>PRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>