force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Initial_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Initial_Approval_Date__c</fullName>
    <label>Initial Approval Date</label>
    <type>DateTime</type>
</CustomField>