force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Max_of_Contracted_Participants__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Max_of_Contracted_Participants__c</fullName>
    <label>Max # of Contracted Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>