force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Platform_Disease_State_Activity__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Platform_Disease_State_Activity__c</fullName>
    <label>Platform/Disease State Activity?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>