force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Primary_Brand_Molecule__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Primary_Brand_Molecule__c</fullName>
    <label>Primary Brand/Molecule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lilly_Platform_Disease_State_Activity__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>11bHSD1 INHIBITOR(LY2508913)</fullName>
            </value>
            <value>
                <fullName>4-HEXYLRESORCINOL</fullName>
            </value>
            <value>
                <fullName>ABCIXIMAB</fullName>
            </value>
            <value>
                <fullName>ABEMACICLIB</fullName>
            </value>
            <value>
                <fullName>AMBROXOL HYDROCHLORIDE</fullName>
            </value>
            <value>
                <fullName>ANASTROZOLE</fullName>
            </value>
            <value>
                <fullName>Ang2 Antibody (LY3127804)</fullName>
            </value>
            <value>
                <fullName>ANTI-CD20 ANTIBODY II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>