force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Primary_Indication_Condition__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Primary_Indication_Condition__c</fullName>
    <label>Primary Indication/Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>