force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Sponsoring_Country__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Sponsoring_Country__c</fullName>
    <label>Sponsoring Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>