force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_Sponsoring_Organization__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Sponsoring_Organization__c</fullName>
    <label>Sponsoring Organization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>IBU Regional</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>