force-app/main/default/objects/OCE__AccountTactic__c/fields/Lilly_TL_Selection_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Lilly_TL_Selection_Criteria__c</fullName>
    <label>TL Selection Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>