force-app/main/default/objects/OCE__AccountTactic__c/fields/OCE__AccountObjective__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountObjective__c</fullName>
    <description>Link to parent Account Objective.</description>
    <label>Account Objective</label>
    <referenceTo>OCE__AccountObjective__c</referenceTo>
    <relationshipName>AccountTactics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>