force-app/main/default/objects/OCE__AccountTactic__c/fields/OCE__AccountPlan__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connected Account Plan.</description>
    <label>Account Plan</label>
    <referenceTo>OCE__AccountPlan__c</referenceTo>
    <relationshipLabel>Account Tactics</relationshipLabel>
    <relationshipName>Account_Tactics</relationshipName>
    <type>Lookup</type>
</CustomField>