force-app/main/default/objects/OCE__AccountTactic__c/fields/OCE__BusinessTactic__c.field-meta.xml
<CustomField>
    <fullName>OCE__BusinessTactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link Business Tactics it was converted from.</description>
    <label>Business Tactic</label>
    <referenceTo>OCE__BusinessTactic__c</referenceTo>
    <relationshipName>AccountTactics</relationshipName>
    <type>Lookup</type>
</CustomField>