force-app/main/default/objects/OCE__AccountTactic__c/fields/OCE__DueDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__DueDate__c</fullName>
    <description>Due Date of Account Tactics.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>