force-app/main/default/objects/OCE__AccountTactic__c/fields/OCE__EndDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__EndDate__c</fullName>
    <description>End of duration for Account Tactics.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>