force-app/main/default/objects/OCE__AccountTactic__c/fields/OCE__OriginOrgId__c.field-meta.xml
<CustomField>
    <fullName>OCE__OriginOrgId__c</fullName>
    <description>Id of the org from which a record originates.</description>
    <externalId>true</externalId>
    <inlineHelpText>Id of the org from which a record originates.</inlineHelpText>
    <label>Origin Org Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>