force-app/main/default/objects/OCE__AccountTactic__c/fields/OCE__ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>OCE__ParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Parent Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountTactics</relationshipName>
    <type>Lookup</type>
</CustomField>