force-app/main/default/objects/OCE__AccountTactic__c/fields/OCE__Sprint__c.field-meta.xml
<CustomField>
    <fullName>OCE__Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sprint that is linked to the Account Tactic.</description>
    <label>Sprint</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>OCE__Sprint__c.OCE__Status__c</field>
            <operation>notContain</operation>
            <value>Completed</value>
        </filterItems>
        <filterItems>
            <field>OCE__Sprint__c.OCE__Status__c</field>
            <operation>notContain</operation>
            <value>Cancelled</value>
        </filterItems>
        <filterItems>
            <field>OCE__Sprint__c.OCE__Status__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>OCE__Sprint__c</referenceTo>
    <relationshipLabel>Account Tactics</relationshipLabel>
    <relationshipName>Account_Tactics</relationshipName>
    <type>Lookup</type>
</CustomField>