force-app/main/default/objects/OCE__AccountTactic__c/fields/OCE__User__c.field-meta.xml
<CustomField>
    <fullName>OCE__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User connected to current Account Tactic.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Tactics</relationshipName>
    <type>Lookup</type>
</CustomField>