force-app/main/default/objects/OCE__AccountTactic__c/validationRules/TLEE_EP_Draft_Contracted_Activity.validationRule-meta.xml
<ValidationRule>
    <fullName>TLEE_EP_Draft_Contracted_Activity</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(OCE__AccountObjective__r.OCE__AccountPlan__r.OCE__Status__c ,&apos;Draft&apos;)) &amp;&amp; $Profile.Name = &apos;TLEE&apos;</errorConditionFormula>
    <errorMessage>Contracted Activity cannot be changed when Engagement Plan status is not Draft</errorMessage>
</ValidationRule>